<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory android:title="@string/pref_start_prog">-->
        <!--<CheckBoxPreference-->
            <!--android:enabled="false"-->
            <!--android:key="onStart"-->
            <!--android:summary="@string/pref_start_summary"-->
            <!--android:title="@string/pref_start_title" />-->
    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="@string/pref_text_style">
        <EditTextPreference
            android:defaultValue="14"
            android:dialogTitle="@string/pref_text_size_dialog"
            android:key="@string/textSize"
            android:summary="@string/pref_text_summary"
            android:title="@string/pref_text_size_title" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/pref_style_dialog"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:key="@string/textStyle"
            android:summary="@string/pref_style_summary"
            android:title="@string/pref_style_title" />

        <PreferenceScreen
            android:key="textColor"
            android:summary="@string/pref_text_color_summary"
            android:title="@string/pref_text_color_title">

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/color_black"
                android:summary="@string/pref_color_black_summary"
                android:title="@string/color_black" />

            <CheckBoxPreference
                android:key="@string/color_blue"
                android:summary="@string/pref_color_blue_summary"
                android:title="@string/color_blue" />

            <CheckBoxPreference
                android:key="@string/color_red"
                android:summary="@string/pref_color_red_summary"
                android:title="@string/color_red" />

            <CheckBoxPreference
                android:key="@string/color_green"
                android:summary="@string/pref_color_green_summary"
                android:title="@string/color_green" />

        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>