<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/delete_forever"
        android:orderInCategory="100"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/menu_clean" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/content_save"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/menu_save" />

    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:title="@string/menu_setting" />
</menu>